CVS - Eric Kidd <eric.kidd@pobox.com> - 25 January 2000

  * Fixed lots of gcc warnings.
  * Added a new 'xmlrpc_server_info' class, which allows you to
    set options on a per-server basis.
  * Added support for HTTP Basic authentication.
  * Added internal implementation of system.multicall, lots of brutal test
    cases, and stubs for other system.* commands.

0.9.5 - Eric Kidd <eric.kidd@pobox.com> - 20 January 2000

  * Bug fix: Make sure CGI-based servers send correct content-length.

0.9.4 - Eric Kidd <eric.kidd@pobox.com> - 18 January 2000

  * Support for CGI-based servers.

0.9.3 - Eric Kidd <eric.kidd@pobox.com> - 14 January 2000

  * Added support for libwww 5.2.8, even when linked against expat.
  * Added xmlrpc_value_type and XmlRpcValue::getType functions.
  * Miscellaneous API tweaks to discourage writing of incorrect programs.
    Should not affect any correct programs.

0.9.2 - Eric Kidd <eric.kidd@pobox.com> - 12 January 2000

  * Improved error messages.
  * Refuse to link against libwww if it was built with expat.

0.9.1 - Eric Kidd <eric.kidd@pobox.com> - 9 January 2000

  * Integrated Rick Blair's fix to speed up libwww client.
  * Added informative URLs to Meerkat example programs.
  * Hid the implementation details of xmlrpc_value, just to keep
    people honest. (No more dangerous allocation on the stack!)
  * Minor C++ code cleanup after buying modern C++ books.
  * Documentation improvements.