@@ -6,6 +6,8 @@ CVS - Eric Kidd <eric.kidd@pobox.com> - 25 January 2000
   * Added support for HTTP Basic authentication.
   * Added internal implementation of system.multicall, lots of brutal test
     cases, and stubs for other system.* commands.
+  * Added APIs for accessing CGI and Abyss method registries.
+  * Implemented system.listMethods.
 
 0.9.5 - Eric Kidd <eric.kidd@pobox.com> - 20 January 2000
 
